syntax = "proto3";

package kari.agent.v1;

option go_package = "github.com/kari/contracts/agent/v1;agentv1";

service AgentService {
  rpc RunSystemCheck(RunSystemCheckRequest) returns (RunSystemCheckResponse);
  rpc ActivateSite(ActivateSiteRequest) returns (ActivateSiteResponse);
}

message RunSystemCheckRequest {
  string server_id = 1;
}

message RunSystemCheckResponse {
  string distro = 1;
  string version = 2;
  map<string, string> services = 3;
  string firewall_type = 4;
  string firewall_status = 5;
}

enum SiteActivationAction {
  SITE_ACTIVATION_ACTION_UNSPECIFIED = 0;
  SITE_ACTIVATION_ACTION_CREATE_SYSTEM_USER = 1;
  SITE_ACTIVATION_ACTION_APPLY_HTTP_VHOST = 2;
  SITE_ACTIVATION_ACTION_ISSUE_CERTIFICATE = 3;
  SITE_ACTIVATION_ACTION_APPLY_HTTPS_VHOST = 4;
}

message ActivateSiteRequest {
  string site_id = 1;
  string domain = 2;
  string ipv4 = 3;
  string ipv6 = 4;
  int32 owner_uid = 5;
  SiteActivationAction action = 6;
}

message ActivateSiteResponse {
  bool ok = 1;
}
